Add tile server

--- a/db/.env
+++ b/db/.env
@@ -1,3 +1,6 @@
 POSTGRES_DB=h3
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=h3
+
+DATABASE_URL=postgresql://postgres:h3@h3-pg-demo-db-1/h3
+TS_DEFAULTMINZOOM=8
